[workspace]
members = [
  "rust-utils",
  "solana-client-extensions",
  "tokens-filter",
  "coinmarketcap-client",
]

[profile.release]
lto = true

[workspace.dependencies]
anyhow = { version = "1.0.56" }
async-trait = { version = "0.1.57" }
axum-tracing-opentelemetry = { version = "0.5.0" }
backoff = { version = "0.4.0", features = ["futures", "tokio"] }
borsh = { version = "0.9.3" }
bs58 = { version = "0.4.0" }
chrono = { version = "0.4" }
config = { version = "0.13", features = ["toml"] }
ed25519-dalek = { version = "1.0.1" }
ethereum-types = { version = "0.13" }
flexi_logger = { version = "0.22" }
futures = { version = "0.3.21" }
gcloud-env = { version = "0.1.0" }
http = { version = "0.2" }
jsonrpsee = { version = "0.18.2", features = ["full"] }
lapin = { version = "2.1" }
lazy_static = { version = "1.4.0" }
log = { version = "0.4", features = ["kv_unstable", "kv_unstable_serde"] }
opentelemetry = { version = "0.18", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.17", features = [
  "rt-tokio",
  "reqwest_collector_client",
] }
opentelemetry-semantic-conventions = { version = "0.10.0" }
paste = { version = "1" }
rand = { version = "0.7" }
reqwest = { version = "0.11", features = ["blocking", "json"] }
rustc-hex = { version = "2.1" }
scheduled-thread-pool = { version = "0.2" }
sentry = { version = "0.26.0" }
sentry-log = { version = "0.26.0" }
sentry-tracing = { version = "0.27" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3" }
solana-address-lookup-table-program = { version = "1.14" }
solana-client = { version = "1.14" }
solana-sdk = { version = "1.14" }
solana-transaction-status = { version = "1.14" }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls"] }
stream-cancel = { version = "0.8" }
strum = { version = "0.21" }
strum_macros = { version = "0.21" }
thiserror = { version = "1.0" }
tokio = { version = "1", features = ["full"] }
tokio-executor-trait = { version = "2.1" }
tokio-reactor-trait = { version = "1.1" }
tower = { version = "0.4", features = ["tokio"] }
tower-http = { version = "0.4", features = ["cors", "trace"] }
tower-opentelemetry = { version = "0.2.0" }
tracing = { version = "0.1" }
tracing-bunyan-formatter = { version = "0.3" }
tracing-log = { version = "0.1" }
tracing-opentelemetry = { version = "0.18" }
tracing-stackdriver = { version = "0.5" }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }

[workspace.dev-dependencies]
claim = "0.5.0"
