[package]
edition = "2021"
name = "coingecko-client"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
http = { workspace = true }
http-client = { path = "../http-client", version = "0.1.0" }
reqwest = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
token-address = { path = "../token-address", version = "0.1.0" }
