[package]
edition = "2021"
name = "token-address"
version = "0.1.0"

[dependencies]
hex-literal = { workspace = true }
primitive-types = { workspace = true, features = ["serde"] }
rustc-hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
solana-sdk = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
