[package]
edition = "2021"
name = "tokens-filter"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
cached = { workspace = true }
coinmarketcap-client = { path = "../coinmarketcap-client" }
normdecimal = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
spl-token = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
